# negf

./: README.md  pyproject.toml  setup.py
negf/: scgf.py
negf-0.1/: LICIENSE  pyproject.toml
negf-0.1/negf/: itgf.py
negf-0.1/tests/: 2dafmti.py  lead.py
